syntax = "proto3";

package pb;

import "validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "gitlab.ozon.dev/miromaxxs/telegram-bot/pb";

message ReportRequest {
  int64                     user_id    = 1 [(validate.rules).int64 = { gt: 0 }];
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time   = 3;
  double                    multiplier = 4 [(validate.rules).double = { gt: 0 }];
}